--- a/includes/stylesheet.css
+++ b/includes/stylesheet.css
@@ -14,7 +14,12 @@ body { margin: 0; padding: 0; font-size: 14px; }
 
 #page.ui-page.ui-body-c.ui-page-active .ui-content { background: none; }
 
-#page { padding-top: 40px; background: #000 url(../images/banner_main.jpg) no-repeat 50% 0px; }
+#page {
+	padding-top: 40px;
+	background: #000 url(../images/banner_main.jpg) no-repeat 50% 0px;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	font-size: 14px;
+}
 #page .heading { display: none; }
 #page .logo { width: 150px; height: 90px; margin: 0px auto 0px auto; background: url(../images/logo.png) no-repeat center 0px; }
 #page .mainmenu {
@@ -31,10 +36,10 @@ body { margin: 0; padding: 0; font-size: 14px; }
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	text-decoration: none;
-	font-weight: bold;
+	font-weight: bolder;
 	display: block;
 	background: rgba(104,35,11,.6)  url(../images/mobile_link_arrow.png) no-repeat right 50%;
-	font-size: 1.15em;
+	font-size: 14px;
 	margin-top: 0px;
 	margin-right: 2px;
 	margin-bottom: 4px;
