--- a/includes/stylesheet.css
+++ b/includes/stylesheet.css
@@ -7,7 +7,7 @@ body { margin: 0; padding: 0; font-size: 14px; }
 
 .ui-page { background-color: #000; }
 .ui-page.ui-body-c.ui-page-active { background: none; }
-.ui-page.ui-body-c.ui-page-active .ui-content { background: #fff url(../images/banner_shadow.jpg) repeat-x 0px 0px; }
+.ui-page.ui-body-c.ui-page-active .ui-content { background: #fff url(../images/xbanner_shadow.jpg) repeat-x 0px 0px; }
 .ui-page.ui-body-c.ui-page-active .ui-header { height: 75px; background: #000 url(../images/banner_main.jpg) no-repeat 50% -75px; }
 .ui-page.ui-body-c.ui-page-active .ui-header h1 { padding: 20px 0px 10px 0px; font-size: 1.4em; }
 
@@ -31,14 +31,14 @@ body { margin: 0; padding: 0; font-size: 14px; }
 #page .mainmenu li .ui-btn-inner { background: none; border: none; margin: 0px; padding: 0px 0px 15px 0px; }
 #page .mainmenu li a {
 	border: 1px solid #fff;
-	border-radius: 16px;
-	color: #ffffff;
+	border-radius: 8px;
+	color: #FFFFFF;
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	text-decoration: none;
 	font-weight: bolder;
 	display: block;
-	background: rgba(104,35,11,.6)  url(../images/mobile_link_arrow.png) no-repeat right 50%;
+	background: rgba(156,65,11,.6) url(../images/mobile_link_arrow.png) no-repeat right 50%;
 	font-size: 14px;
 	margin-top: 0px;
 	margin-right: 2px;
