--- a/includes/stylesheet.css
+++ b/includes/stylesheet.css
@@ -2,7 +2,13 @@
 /* CSS Document */
 
 html {  }
-body { margin: 0; padding: 0; font-size: 14px; }
+body {
+	margin: 0;
+	padding: 0;
+	font-size: 14px;
+	color: #000;
+	background: none;
+}
 .ui-mobile-viewport { background-color: #000; }
 
 .ui-page { background-color: #000; }
@@ -39,7 +45,7 @@ body { margin: 0; padding: 0; font-size: 14px; }
 	text-decoration: none;
 	font-weight: bolder;
 	display: block;
-	background: rgba(89,97,206,.3) url(../images/mobile_link_arrow.png) no-repeat right 50%;
+	background: rgba(289,97,106,.3) url(../images/mobile_link_arrow.png) no-repeat right 50%;
 	font-size: 14px;
 	margin-top: 0px;
 	margin-right: 2px;
